# baikalnlpy

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.code/: env
baikalnlpy/: __init__.py  _custom_dict.py  _custom_dict_client.py  _lang_service_client.py  _tagger.py
deeqnlpy/: __init__.py  _custom_dict.py  _custom_dict_client.py  _lang_service_client.py  _tagger.py
deeqnlpy/baikal/language/: custom_dict_pb2.py  custom_dict_pb2_grpc.py  dict_common_pb2.py  language_service_pb2.py  language_service_pb2_grpc.py
deeqnlpy/google/api/: annotations_pb2.py
deeqnlpy/lib/baikal/language/: custom_dict_pb2.py  custom_dict_pb2_grpc.py  language_service_pb2.py  language_service_pb2_grpc.py
tests/: test_tagger.py
