[tool.poetry]
name = "deeqnlpy"
version = "0.9.4"
description = "The deeq nlp python client library"
authors = ["Gihyun YUN <gih2yun@baikal.ai>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://baikal.ai/app2/#/morpheme"
repository = "https://github.com/baikalai/deeqnlpy"
keywords = [ "NLP", "Korean", "Deep Learning", "POS tagger"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "Natural Language :: Korean",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[tool.poetry.dependencies]
python = "^3.6"
grpcio = "1.35.0"
protobuf = "3.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
